SSH should now work on OSX (finally)
Not done in the best way due to script invocation, but good enough for now